[package]
name = "cube_combination_reader"
version = "0.1.0"
authors =["cornsnek"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "10.0.0"
fltk = { version = "^1.3", git = "https://github.com/fltk-rs/fltk-rs" }